# QuickOK-Renderer

./: .clang_format  .cmake-format  .gitignore  .gitmodules  CMakelists.txt  README.md  icu_filter.txt  uncrustify.cfg
core/: CMakeLists.txt
core/include/: font_engine.h  renderer.h  shader_serializer.h  video_out_streamer.h
core/include/internal/: rendering_device_common.h
core/source/: char_prerender.c  command_buffer.c  command_buffer.h  deps_test.c  grapheme_collect.h  grapheme_collector.c  mimalloc_vulkan_callback.c  mimalloc_vulkan_callback.h  rendering_env.c  rendering_env.h  rendering_hw.c  vertex_input_layout.h  video_encoder.h  video_encoder_hw.c  visual_element.h  vk_fmtprops_map.h  vkmemory_block.h  vulkan_make_debug_message.h  wrapped_vulkan_buffer.c
core/source/char_renderer/: char_size_converter.h  glyph_provider.h
core/source/container/: descriptor_set_layout_binding_map.c  descriptor_set_layout_binding_map.h  funnel_hash_table.c  funnel_hash_table.h  id_object_map.c  id_object_map.h  optional.h  ordered_list.c  ordered_list.h  pipeline_state_maps.c  pipeline_state_maps.h  rbtree.h  sampler_map.c  sampler_map.h  staging_allocation_deque.c  staging_allocation_deque.h  string_hash_index_map.c  string_hash_index_map.h  string_hash_material_parameter_map.h  string_hash_table.c  string_hash_wvktexture_map.h  vector.h  vk_fmtprops_map.c  vkimage_info_hash_wvkimage_list_map.h  vkimage_view_map.c  vkimage_view_map.h  wvkimage_list.h
core/source/diagnostics/: device_fault.c  vulkan_make_debug_message.h
core/source/output_surface/: output_surface.h  video_surface.h
core/source/pso/: depth_stencil_state.h  graphics_pipeline_description.h  pipeline_state_manager.c  pipeline_state_manager.h  pipeline_states.h  rasterization_state.c  rasterization_state.h
core/source/resources/: material_template.h  mesh.h
core/source/resources_manager/: resource_manager.h  sampler_cache.h  staging_manager.c  staging_manager.h  transient_image_allocator.c  transient_image_allocator.h
core/source/shader/glsl/: cubic_bezier.frag  grad_gray2rgba.frag  grad_gray2rgba.vert  grad_grey2rgb.vert  rectangle.vert  rgb2nv12.comp  rgba2nv12.comp  solid_shade_gray.frag
core/source/wrapped_vulkan_objects/: everything.h  wvkbuffer.c  wvkbuffer.h  wvkimage.c  wvkimage.h  wvkimage_list.c  wvkshader.c  wvkshader.h  wvktexture.c  wvktexture.h
dependencies/: QOZero
deprecated/: shader_cache_structure.txt
doc/: gles_cache_structure.txt
include/: canvas.h  font_engine.h  renderer.h  text_builder.h  video_encoder.h  video_out_streamer.h
include/internal/: canvas_base.h
source/: access_info_inferor.h  barrier_inferor.h  canvas_egl.c  char_collector.c  char_prerender.c  classic_vertex.h  egl_common.h  funnel_hash_table.h  glfw_swapchain.c  main.c  ordered_list.h  output_surface.h  queue_families_score.c  rendering_common.c  rendering_env.c  rendering_env.h  rendering_hw.c  screen_surface.h  shader_serializer.c  string_hash_index_map.h  string_hash_table.h  transient_image_allocator.c  transient_resource_allocator.c  transient_resource_allocator.h  vertex_input_layout.c  video_encoder.h  video_encoder_hw.c  visual_element.h  vk_image_view_map.c  vk_image_view_map.h  vk_mem_alloc.h  vkimage_info_hash_wvkimage_list_map.c  vkimage_view_map.c  warped_vulkan_image.c  warped_vulkan_image.h  watchdog.h  window.h  wrapped_vulkan_buffer.h  wrapped_vulkan_image.c  wrapped_vulkan_image.h  (+1 more)
source/pso/: depth_stencil_state.c  depth_stencil_state.h  pipeline_state_manager.h  pipeline_states.h  rasterization_state.h
source/shader/: shader.c
source/shader/glsl/: grad_gray2rgb.frag  quadratic_bezier.frag  ramp_gray2rgba.frag  rectangle.frag  rgba2yuv420p.comp  solid_shade_gray.frag  solid_shade_gray.vert
